# Tour_Robot

./: README.md  SHUTDOWN_COMPLETE_REPORT.md  SHUTDOWN_IMPLEMENTATION_SUMMARY.md  SHUTDOWN_INDEX.md  SHUTDOWN_QUICK_START.md  SHUTDOWN_SYSTEM.md
Ld19/Processing/: cm5_shutdown_handler_node.py  ld19_monitor_node.py  ld19_preprocess.launch.py  ld19_preprocess_node.py  lidar_odom_node.hpp  lidar_odom_node_placeholder.cpp  voxelizer_node.cpp  voxelizer_node.hpp
Luxonis Camera/Front Camera/Launcher/: front_oak_processor.launch.py
Luxonis Camera/Front Camera/Main Program/: front_oak_node.py
Luxonis Camera/Rear Camera/Launcher/: rear_oak_processor.launch.py
Luxonis Camera/Rear Camera/Main Program/: rear_oak_node.py
Main SER8 Unit/: PLC_MOTOR_CONTROLLER_GUIDE.md  README_POC.md  ROS2_Code_Placement.txt  VM_SETUP_GUIDE.md
Main SER8 Unit/HMI GUI/: eyes_widget.py  hmi_main.py
Main SER8 Unit/Launcher/: main_control.launch.py  navigation_poc.launch.py  oak_pointcloud.rviz  system_bringup.launch.py
Main SER8 Unit/Main Control/: cm5_service_watchdog.py  main_controller_node.py  motor_controller_stub.py  package.xml  plc_motor_client.py  ser8_navigation_poc.py  ser8_startup.py  setup.py  shutdown_manager_node.py  udp_motor_client.py
Main SER8 Unit/Main Control/main_control/: __init__.py
Main SER8 Unit/ser8-setup/: README.md
Main SER8 Unit/ser8-setup/config/: ser8.env.example
Main SER8 Unit/ser8-setup/docs/: PREREQUISITES.md  SER8_INSTALLATION_GUIDE.md  TROUBLESHOOTING.md
PLC/: Completecode.ino  ManualControl.ino  moretestA.cpp.ino
cm5_autostart/: 99-ld19.rules  CM5_INSTALLATION_GUIDE.md  README.md  SER8_INSTALLATION_GUIDE.md  cm5-watchdog.service  cm5-watchdog.timer  ld19-stack.service  ld19.service  start-tour-robot.sh  start_ld19.sh  start_ld19_stack.sh
front_oak_processor/: package.xml  setup.cfg  setup.py
front_oak_processor/front_oak_processor/: front_oak_node.py
front_oak_processor/launch/: front_oak_processor.launch.py
ld19_utils/: README_CM5_SETUP.md  package.xml  setup.cfg  setup.py
ld19_utils/launch/: ld19_autorun.launch.py
ld19_utils/ld19_utils/: ld19_monitor_node.py  ld19_preprocess_node.py
ld19_utils/resource/: ld19_utils
rear_oak_processor/: package.xml  setup.cfg  setup.py
rear_oak_processor/launch/: rear_oak_processor.launch.py
rear_oak_processor/rear_oak_processor/: rear_oak_node.py
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: FrontCameraSummary.msg  LidarScanSummary.msg
(+9 files in other folders)
