<?xml version="1.0"?>
<package format="3">
  <name>rear_oak_processor</name>
  <version>0.1.0</version>
  <description>Rear OAK-D point cloud and detection post-processing for Tour Robot.</description>
  <maintainer email="tour-robot@example.com">Tour Robot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>robot_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
